<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bksingup"
    tools:context=".SingUp">


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="328dp"
        android:background="@drawable/edtshape"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edtshape"
        android:drawableLeft="@drawable/envelope"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/edtshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/btnsignup"
        android:drawableLeft="@drawable/userplus"
        android:onClick="signup"
        android:paddingLeft="95dp"
        android:paddingRight="98dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:onClick="signin"
        android:text="@string/sgin_in"
        android:textColor="@color/green_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>