<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bklogin"
    tools:context=".Login">


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/edtshape"
        android:drawableLeft="@drawable/envelope"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:textColor="#000000"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/edtshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:textColor="#000000"
        android:textColorHint="#8B000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/btnlogin2"
        android:drawableLeft="@drawable/keywhite"
        android:onClick="login"
        android:paddingLeft="115dp"
        android:paddingRight="115dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />


    <CheckBox
        android:id="@+id/chb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:checked="true"
        android:text="@string/remember_password"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <TextView
        android:id="@+id/txvd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:text="Forget Password ?"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="21dp"
        android:text="@string/don_t_have_any_account_yet"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_remember" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="27dp"
        android:onClick="toSignup"
        android:text="@string/signup"
        android:textColor="@color/green_p"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txvd2" />

</androidx.constraintlayout.widget.ConstraintLayout>