<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminUpdateMember">

    <RelativeLayout
        android:background="@color/green_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/icon_user"
            android:paddingTop="15dp"
            android:text="Admin"
            android:textColor="#000"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/icon_user"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fream"
            android:src="@drawable/ic_baseline_person_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:onClick="Back"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="OnClick,VectorDrawableCompat" />


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/edt_numtic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/edtid" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="118dp"
            android:text="ID"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_idbknum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="118dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="Username"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="48dp"
            android:text="Password"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="39dp"
            android:text="Email"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <Button
            android:id="@+id/button13"
            android:layout_width="259dp"
            android:layout_height="61dp"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/btnadd"
            android:onClick="updateMember"
            android:text="Update"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_numtic" />

        <EditText
            android:id="@+id/edtpknum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toBottomOf="@+id/txv_idbknum" />

        <EditText
            android:id="@+id/edtid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/edtpknum" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>